# kafkrs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
kafkrs-models/: Cargo.toml
kafkrs-models/src/: config.rs  lib.rs  message.rs  schema.rs
kafkrs-python/: Cargo.toml  README.md  pyproject.toml
kafkrs-python/src/: lib.rs
kafkrs-server/: Cargo.toml  README.md
kafkrs-server/src/: broker.rs  config.rs  listener.rs  main.rs  server.rs  writer.rs
