[package]
name = "kafkrs-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kafkrs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
kafkrs-models = { path = "../kafkrs-models" }
chrono = "0.4.38"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "serde", "alloc"] }
