[package]
name = "kafkrs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["fs", "rt", "rt-multi-thread", "macros", "sync", "io-util", "net"] }
toml = "0.8.12"
kafkrs-models = { path = "../kafkrs-models" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "serde", "alloc"] }
# Dev
pre-commit-hooks = "0.3"

