[package]
name = "kafkrs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
tokio = { version = "1.37.0", features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "io-util",
  "net",
] }
toml = "0.8.12"
kafkrs-models = { path = "../kafkrs-models" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
# Dev
pre-commit-hooks = "0.3"
arrow-ipc = "55.0.0"
arrow = "55.0.0"
arrow-schema = "55.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
arrow-array = "55.0.0"
tokio-util = { version = "0.7.15", features = ["rt"] }
